--- a/lern-projekte/The-Shoe-Company/package.json
+++ b/lern-projekte/The-Shoe-Company/package.json
@@ -22,7 +22,7 @@
   "main": "tailwind.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./input.css -o ./output.css"
+    "build": "tailwindcss -i ./input.css -o ./output.css --minify"
   },
   "repository": {
     "type": "git",
