--- a/lern-projekte/The-Shoe-Company/package.json
+++ b/lern-projekte/The-Shoe-Company/package.json
@@ -35,6 +35,8 @@
   },
   "homepage": "https://github.com/alwaysyash616/alwaysyash616/tree/main#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.2.7"
   }
 }
